# M2-Dev-v1

./: .cursorrules  .gitignore  GM_Commands_Reference.md  LICENSE  MOUSE_WHEEL_IMPLEMENTATION.md  check_port.ps1  db_desc.txt  read_log.py
.agent/rules/: agent-rules.md  compilation-rules.md  delete.md  packets.md  proto-management.md  python-ui.md  questing.md
m2dev-client/: .gitignore  check_spelling.py  deep_fix.py  push_to_fork.bat
m2dev-client-src/: .gitignore
m2dev-client-src/src/: CMakeLists.txt
m2dev-client-src/src/AudioLib/: CMakeLists.txt  MaSoundInstance.cpp  SoundEngine.cpp  SoundEngine.h  Type.cpp  Type.h
m2dev-client-src/src/ConfigTool/: CMakeLists.txt  main.cpp
m2dev-client-src/src/EffectLib/: CMakeLists.txt  EffectData.cpp  EffectData.h  EffectElementBase.cpp  EffectElementBaseInstance.cpp  EffectElementBaseInstance.h  EffectInstance.cpp  EffectInstance.h  EffectManager.cpp  EffectManager.h  EffectMesh.cpp  EffectMesh.h  EffectMeshInstance.cpp  EffectMeshInstance.h  EmitterProperty.cpp  FrameController.cpp  ParticleInstance.cpp  ParticleInstance.h  ParticleProperty.cpp  ParticleProperty.h  ParticleSystemData.cpp  ParticleSystemData.h  ParticleSystemInstance.cpp  ParticleSystemInstance.h  SimpleLightData.cpp  SimpleLightData.h  SimpleLightInstance.cpp  SimpleLightInstance.h  StdAfx.h  Type.cpp  Type.h
m2dev-client-src/src/EterBase/: CMakeLists.txt  CRC32.cpp  Debug.cpp  Debug.h  FileBase.cpp  FileDir.cpp  FileDir.h  FileLoader.cpp  FileLoader.h  Filename.h  Random.cpp  Random.h  Singleton.h  StdAfx.cpp  StdAfx.h  Stl.cpp  Stl.h  Timer.cpp  Timer.h  Utils.cpp  Utils.h  cipher.cpp  cipher.h  error.cpp  lzo.cpp  lzo.h  tea.cpp  tea.h
m2dev-client-src/src/EterGrnLib/: CMakeLists.txt  Deform.cpp  LODController.cpp  LODController.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelInstance.cpp  ModelInstance.h  ModelInstanceCollisionDetection.cpp  ModelInstanceModel.cpp  ModelInstanceMotion.cpp  ModelInstanceRender.cpp  ModelInstanceUpdate.cpp  Motion.cpp  StdAfx.h  Thing.cpp  ThingInstance.cpp  ThingInstance.h  Util.cpp
m2dev-client-src/src/EterImageLib/: CMakeLists.txt  DDSTextureLoader9.cpp  DDSTextureLoader9.h  Image.cpp  Image.h  STBImageImplementation.cpp  StdAfx.h
m2dev-client-src/src/EterLib/: AttributeData.cpp  AttributeInstance.cpp  AttributeInstance.h  BlockTexture.cpp  BlockTexture.h  CMakeLists.txt  Camera.cpp  Camera.h  CollisionData.cpp  CollisionData.h  ColorTransitionHelper.cpp  ColorTransitionHelper.h  CullingManager.cpp  CullingManager.h  Decal.cpp  Decal.h  DibBar.cpp  DibBar.h  Event.h  FileLoaderThread.cpp  FileLoaderThread.h  FuncObject.h  GrpBase.cpp  GrpBase.h  GrpCollisionObject.cpp  GrpCollisionObject.h  GrpColor.cpp  GrpColorInstance.cpp  GrpD3DXBuffer.cpp  GrpDIB.cpp  GrpDevice.cpp  GrpDevice.h  GrpExpandedImageInstance.cpp  GrpExpandedImageInstance.h  GrpFontTexture.cpp  GrpFontTexture.h  GrpImage.cpp  GrpImageInstance.cpp  GrpImageInstance.h  GrpImageTexture.cpp  (+72 more)
m2dev-client-src/src/EterLocale/: Arabic.cpp  CMakeLists.txt  Japanese.cpp  StringCodec.cpp  (+1 more)
m2dev-client-src/src/ScriptLib/: CMakeLists.txt  PythonDebugModule.cpp  PythonLauncher.cpp  PythonLauncher.h  PythonMarshal.cpp  PythonUtils.cpp  PythonUtils.h  Resource.cpp  Resource.h  StdAfx.cpp  StdAfx.h
m2dev-client-src/src/UserInterface/: AbstractApplication.h  AbstractCharacterManager.h  AbstractChat.h  AbstractPlayer.h  AbstractSingleton.h  AccountConnector.cpp  AccountConnector.h  AffectFlagContainer.cpp  CMakeLists.txt  CameraProcedure.cpp  GameType.cpp  GameType.h  GuildMarkDownloader.cpp  GuildMarkDownloader.h  GuildMarkUploader.cpp  GuildMarkUploader.h  InstanceBase.cpp  InstanceBase.h  InstanceBaseBattle.cpp  InstanceBaseEffect.cpp  InstanceBaseMotion.cpp  InstanceBaseMovement.cpp  InstanceBaseTransform.cpp  InsultChecker.cpp  Locale.cpp  Locale.h  Locale_inc.h  MarkImage.cpp  MarkImage.h  MarkManager.cpp  MarkManager.h  MovieMan.cpp  MovieMan.h  NetworkActorManager.cpp  NetworkActorManager.h  Packet.h  ProcessCRC.cpp  ProcessScanner.cpp  PythonApplication.cpp  PythonApplication.h  (+88 more)
m2dev-client/assets/: pack.bat  pack.py
m2dev-client/config/: metin2.cfg
m2dev-client/root/: constinfo.py  ui.py
m2dev-dump-proto/: README.md
m2dev-server/: DIAGNOSTICO_LOGS.md  GUIA_MARIADB.md  GUIA_MYSQL.md  admin_panel.py  channels.py  check_mysql.ps1  check_python_path.ps1  compile_quests.ps1  configure_mysql57.ps1  create_basic_tables.sql  create_password_function.sql  debug_status.py  import_backup.ps1  install.py  kill_server.bat  kill_server.ps1  package.json  setup_mysql57.sql  simple_debug.json  start.py  start_mysql.ps1  stop.py  test_mysql.ps1  test_stop.js  web_manager.js  web_manager.py
m2dev-server-src/src/db/: CMakeLists.txt  Cache.cpp  Cache.h  ClientManager.cpp  ClientManager.h  ClientManagerBoot.cpp  ClientManagerEventFlag.cpp  ClientManagerGuild.cpp  ClientManagerHorseName.cpp  ClientManagerLogin.cpp  ClientManagerParty.cpp  ClientManagerPlayer.cpp  Config.cpp  CsvReader.cpp  CsvReader.h  DBManager.cpp  DBManager.h  GuildManager.cpp  GuildManager.h  HB.cpp  HB.h  ItemAwardManager.cpp  ItemAwardManager.h  ItemIDRangeManager.cpp  ItemIDRangeManager.h  Lock.cpp  Lock.h  LoginData.cpp  LoginData.h  Main.cpp  Marriage.cpp  Marriage.h  Monarch.cpp  Monarch.h  MoneyLog.cpp  NetBase.cpp  Peer.cpp  Peer.h  PeerBase.cpp  PeerBase.h  (+8 more)
m2dev-server-src/src/game/: CMakeLists.txt  ani.cpp  ani.h  char.cpp  char.h  char_battle.cpp  char_item.cpp  cmd_general.cpp  config.cpp  config.h  desc.cpp  desc.h  desc_manager.cpp  desc_manager.h  input.cpp  input.h  input_auth.cpp  input_db.cpp  input_login.cpp  input_main.cpp  input_p2p.cpp  item.cpp  item.h  item_manager.cpp  item_manager.h  main.cpp  packet.h  packet_info.cpp  questlua.cpp  questlua.h  questlua_global.cpp  questlua_item.cpp  shop.cpp  xmas_event.h
m2dev-server-src/src/qc/: CMakeLists.txt
temp_pickup_effect/: README.md
translation_tool/: list_models.py  requirements.txt  restore_backups.py  run_full_translation.py  test_kv.txt  test_kv_out.txt  translate_m2.py
(+214 files in other folders)
